# sofawiz

./: .sofawiz.bash.swp  CMakeLists.txt  sofawiz  sofawiz.bash
templates/: component_class.cpp  component_class.h  component_templateclass.cpp  component_templateclass.h  component_templateclass.inl  sofa_licence
